--- a/wine_analysis.ipynb
+++ b/wine_analysis.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### importando as bibliotecas"
+    "#### Importando as bibliotecas"
    ]
   },
   {
@@ -700,6 +700,31 @@
     "sns.heatmap(dataframe.corr(), annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Correlação entre Variáveis')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusão sobre os dados\n",
+    "\n",
+    "**1. Taxa de Acidez Volátil:**\n",
+    "\n",
+    "+ A maioria dos vinhos exibe uma taxa de acidez volátil que varia de baixa a moderada, com uma concentração notável entre 0.2 e 0.6.\n",
+    "+ Observa-se uma cauda à direita no histograma, no entanto, indicando que há alguns vinhos com taxas de acidez volátil altas, embora menos comuns.\n",
+    "\n",
+    "\n",
+    "**2. Teor de Cloretos:**\n",
+    "\n",
+    "+ A análise revela que a maioria dos vinhos possui um teor de cloretos concentrado em valores mais baixos.\n",
+    "+ A distribuição dos cloretos é assimétrica, apresentando uma cauda mais longa em direção aos valores mais altos.\n",
+    "+ Isso elucida que, embora a maioria dos vinhos tenha baixo teor de cloretos, existem alguns vinhos com níveis mais elevados.\n",
+    "\n",
+    "\n",
+    "**3. Associação com o Grau de Amargor:**\n",
+    "\n",
+    "+ A presença de cloretos é associada ao grau de amargor do vinho, já que essa substância tem potencial para contribuir para essa sensação de amargor.\n",
+    "+ Com base em nossas análises, pode-se inferir que a concentração de cloretos em níveis mais elevados tenha influência direta na percepção do amargor dos vinhos."
    ]
   }
  ],
