--- a/wine_analysis.ipynb
+++ b/wine_analysis.ipynb
@@ -724,7 +724,19 @@
     "**3. Associação com o Grau de Amargor:**\n",
     "\n",
     "+ A presença de cloretos é associada ao grau de amargor do vinho, já que essa substância tem potencial para contribuir para essa sensação de amargor.\n",
-    "+ Com base em nossas análises, pode-se inferir que a concentração de cloretos em níveis mais elevados tenha influência direta na percepção do amargor dos vinhos."
+    "+ Com base em nossas análises, pode-se inferir que a concentração de cloretos em níveis mais elevados tenha influência direta na percepção do amargor dos vinhos.\n",
+    "\n",
+    "\n",
+    "**4. Correlação com Qualidade**:\n",
+    "\n",
+    "+ Sulphates: Existe uma correlação positiva, mas moderada, entre teor de sulfatos e qualidade. Isso sugere que vinhos com níveis mais altos de sulfatos sejam percebidos como de melhor qualidade.\n",
+    "+ Volatile Acidity: Existe uma correlação negativa forte entre acidez volátil e qualidade do vinho. Isso sugere que vinhos com altos níveis de acidez volátil sejam percebidos como de menor qualidade.\n",
+    "\n",
+    "\n",
+    "**5. Heatmap de Correlação**:\n",
+    "\n",
+    "+ Variáveis 'alcohol', 'sulphates' e 'citric acid' demonstram correlações positivas moderadas com 'quality'. Isso sugere que vinhos com teor alcoólico mais alto, níveis mais elevados de sulfatos e ácido cítrico podem estar associados a uma maior qualidade nos vinhos.\n",
+    "+ Variáveis 'volatile acidity' e 'total sulfur dioxide' demostram correlações negativas moderadas com 'quality'. Isso indica que altos níveis de acidez volátil e dióxido de enxofre total podem estar associados a uma menor qualidade nos vinhos."
    ]
   }
  ],
